# pr-review-tool

./: GitHub Pull Request Review Report Generation Tool 20250613.docx  LICENSE  README.md  main.py  pr-review.spec  pr_report.xlsx  pyproject.toml  requirements.txt
.github/workflows/: build.yml
adapters/: __init__.py
adapters/driven/: __init__.py  excel_report_writer.py  github_api.py  report_writers.py
adapters/driving/: __init__.py  cli.py
application/: report_service.py
domain/: models.py
ports/: __init__.py  github_port.py  report_output_port.py
tests/: test_report_service.py
